--- a/package.json
+++ b/package.json
@@ -6,7 +6,23 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": false,
+    "quoteProps": "consistent",
+    "jsxSingleQuote": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "arrowParens": "avoid",
+    "requirePragma": false,
+    "insertPragma": false,
+    "proseWrap": "preserve",
+    "htmlWhitespaceSensitivity": "css",
+    "endOfLine": "lf"
+  },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-umd": "^6.1.18",
     "chai": "^3.4.1",
